Added search functionality to search button.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="search">
             <input type="text" class="search-bar" id="search-bar" placeholder="search">
-            <button class="search-button">
+            <button class="custom-button" id="search-button">
                 <i class="fa fa-search"></i>
               </button>
         </div>
